--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.2",
+    "sweetalert2": "^11.7.5",
     "validator": "^13.9.0"
   },
   "scripts": {
